--- a/public/style.css
+++ b/public/style.css
@@ -9,4 +9,33 @@ canvas {
   overflow: hidden;
   cursor: crosshair;
   background-color: black;
+  position: fixed;
+}
+
+.menu {
+  height: 100%;
+  width: 250px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: -250px;
+  background-color: white;
+  overflow-x: hidden;
+  transition: 0.5s;
+  background-color: gray;
+
+  user-select: none;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -o-user-select: none;
+}
+
+.menu-option {
+  width: 100%;
+  height: 75px;
+  margin: 0;
+  text-align: center;
+  background-color: cadetblue;
+  border: 2px solid rgb(55, 226, 84);
 }
