--- a/views/landing_page.pug
+++ b/views/landing_page.pug
@@ -12,3 +12,5 @@ input#codeInput
 button#connectBtn Connect Using Code
 
 button#newCanvBtn Make a new Canvas
+
+input#colorInput(placeholder="Canvas color in hex")
