--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,6 @@
 html,
 body {
+  font-family: "Epilogue", sans-serif;
   margin: 0px;
   width: 100vw;
   height: 100vh;
@@ -37,4 +38,40 @@ canvas {
   text-align: center;
   background-color: cadetblue;
   border: 2px solid rgb(55, 226, 84);
+}
+
+.slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 100%;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: 0.2s;
+  transition: opacity 0.2s;
+}
+
+.slider:hover {
+  opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 75px;
+  background: #4caf50;
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  background: #4caf50;
+  cursor: pointer;
+}
+
+input[type="color"] {
+  width: 100%;
+  height: 100%;
 }
