--- a/views/canvas.pug
+++ b/views/canvas.pug
@@ -25,8 +25,12 @@ head
   .menu-option
     p#toolLine(name="line") Line
   .menu-option
+    p#toolEraser(name="eraser") Eraser
+  .menu-option
     p#colorPickMode Eyedropper
   .menu-option
     p#fillShape Fill Shape
+  .menu-option
+    p#download Download Image
 
 canvas#canvas(scroll='no')
